--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.2.0",
         "@vitejs/plugin-vue": "^5.2.0",
+        "chart.js": "^4.4.6",
+        "lucide-vue-next": "^0.460.0",
         "vue": "^3.5.13"
     }
 }
