--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@inertiajs/vue3": "^1.2.0",
         "@vitejs/plugin-vue": "^5.2.0",
         "chart.js": "^4.4.6",
+        "lodash": "^4.17.21",
         "lucide-vue-next": "^0.460.0",
         "vue": "^3.5.13"
     }
