--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "chart.js": "^4.4.6",
         "lodash": "^4.17.21",
         "lucide-vue-next": "^0.460.0",
+        "tailwind-scrollbar": "^3.1.0",
         "vue": "^3.5.13"
     }
 }
