--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^1.2.0",
         "@vitejs/plugin-vue": "^5.2.0",
         "chart.js": "^4.4.6",
