--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.3",
+        "ixudra/curl": "^6.22",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.4"
