--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "inertiajs/inertia-laravel": "^1.3",
         "ixudra/curl": "^6.22",
         "laravel/framework": "^11.9",
