--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "@headlessui/vue": "^1.7.23",
         "@inertiajs/vue3": "^1.2.0",
         "@vitejs/plugin-vue": "^5.2.0",
-        "chart.js": "^4.4.6",
+        "@vuepic/vue-datepicker": "^10.0.0",
+        "chart.js": "^4.4.7",
         "lodash": "^4.17.21",
         "lucide-vue-next": "^0.460.0",
         "tailwind-scrollbar": "^3.1.0",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-chartjs": "^5.3.2"
     }
 }
